check_out.txt
cargo :     Checking poly_5min_bot v0.1.0 
(C:\Users\user\Documents\Repo2\Polymarket-crypto-5min-arbitrage-bot)
At line:1 char:1
+ cargo check --tests 2>&1 | Out-File -FilePath check_out.txt -Encoding ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking po...-arbitrage-bot):S 
   tring) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused imports: `debug` and `trace`
  --> src\risk\hedge_monitor.rs:14:15
   |
14 | use tracing::{debug, error, info, trace, warn};
   |               ^^^^^               ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `debug`
 --> src\risk\positions.rs:5:15
  |
5 | use tracing::{debug, info, trace};
  |               ^^^^^

warning: unused import: `rust_decimal_macros::dec`
 --> src\strategy\action_executor.rs:8:5
  |
8 | use rust_decimal_macros::dec;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `polymarket_client_sdk::types::U256`
  --> src\strategy\mm.rs:13:5
   |
13 | use polymarket_client_sdk::types::U256;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `debug`
  --> src\strategy\apex.rs:14:15
   |
14 | use tracing::{debug, info, warn};
   |               ^^^^^

error[E0639]: cannot create non-exhaustive struct using struct expression
   --> src\strategy\apex.rs:521:23
    |
521 |               yes_book: BookUpdate {
    |  _______________________^
522 | |                 asset_id: U256::from(1),
523 | |                 bids: vec![],
524 | |                 asks: vec![],
525 | |                 // Add common fields if they exist, or just the ones we 
know
526 | |             },
    | |_____________^

error[E0063]: missing fields `hash`, `market` and `timestamp` in initializer of 
`BookUpdate`
   --> src\strategy\apex.rs:521:23
    |
521 |             yes_book: BookUpdate {
    |                       ^^^^^^^^^^ missing `hash`, `market` and `timestamp`

error[E0639]: cannot create non-exhaustive struct using struct expression
   --> src\strategy\apex.rs:527:22
    |
527 |               no_book: BookUpdate {
    |  ______________________^
528 | |                 asset_id: U256::from(2),
529 | |                 bids: vec![],
530 | |                 asks: vec![],
531 | |             },
    | |_____________^

error[E0063]: missing fields `hash`, `market` and `timestamp` in initializer of 
`BookUpdate`
   --> src\strategy\apex.rs:527:22
    |
527 |             no_book: BookUpdate {
    |                      ^^^^^^^^^^ missing `hash`, `market` and `timestamp`

error[E0639]: cannot create non-exhaustive struct using struct expression
   --> src\strategy\apex.rs:535:35
    |
535 |         pair.yes_book.asks = vec![OrderBookLevel { price: dec!(0.501), 
size: dec!(100) }];
    |                                   
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0639]: cannot create non-exhaustive struct using struct expression
   --> src\strategy\apex.rs:536:35
    |
536 |         pair.yes_book.bids = vec![OrderBookLevel { price: dec!(0.499), 
size: dec!(100) }];
    |                                   
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0639]: cannot create non-exhaustive struct using struct expression
   --> src\strategy\apex.rs:537:34
    |
537 |         pair.no_book.asks = vec![OrderBookLevel { price: dec!(0.501), 
size: dec!(100) }];
    |                                  
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0639]: cannot create non-exhaustive struct using struct expression
   --> src\strategy\apex.rs:538:34
    |
538 |         pair.no_book.bids = vec![OrderBookLevel { price: dec!(0.499), 
size: dec!(100) }];
    |                                  
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `default` found for struct 
`strategy::StrategyContext<'a>` in the current scope
   --> src\strategy\apex.rs:540:40
    |
540 |         let mut ctx = StrategyContext::default();
    |                                        ^^^^^^^ function or associated item 
not found in `strategy::StrategyContext<'_>`
    |
   ::: src\strategy\mod.rs:51:1
    |
 51 | pub struct StrategyContext<'a> {
    | ------------------------------ function or associated item `default` not 
found for this struct
    |
    = help: items from traits can only be used if the trait is implemented and 
in scope
    = note: the following trait defines an item `default`, perhaps you need to 
implement it:
            candidate #1: `std::default::Default`

warning: unused variable: `yes_final_size`
  --> src\monitor\arbitrage.rs:81:9
   |
81 |         yes_final_size: Decimal,
   |         ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_yes_final_size`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `no_final_size`
  --> src\monitor\arbitrage.rs:82:9
   |
82 |         no_final_size: Decimal,
   |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_no_final_size`

warning: unused variable: `yes_price`
  --> src\risk\manager.rs:76:9
   |
76 |         yes_price: Decimal,
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_yes_price`

warning: unused variable: `no_price`
  --> src\risk\manager.rs:77:9
   |
77 |         no_price: Decimal,
   |         ^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_no_price`

Some errors have detailed explanations: E0063, E0599, E0639.
For more information about an error, try `rustc --explain E0063`.
warning: `poly_5min_bot` (bin "poly_5min_bot" test) generated 9 warnings
error: could not compile `poly_5min_bot` (bin "poly_5min_bot" test) due to 9 
previous errors; 9 warnings emitted
